<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickLogOut"
        android:text="Log out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn"
        app:layout_constraintVertical_bias="0.992" />

    <Button
        android:id="@+id/log_reg_btn"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickLogReg"
        android:text="Login/Reg"
        app:layout_constraintBottom_toTopOf="@+id/log_out_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/beachButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickBeach"
        android:text="Beach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/restaurantButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickRestaurant"
        android:text="Restaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="78dp"
        android:text=""
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <!--    <Button-->
    <!--        android:id="@+id/routeButton"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="168dp"-->
    <!--        android:layout_marginBottom="524dp"-->
    <!--        android:onClick="onClickRoute"-->
    <!--        android:text="Navigate"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/rangeChoice" />-->

    <Spinner
        android:id="@+id/rangeChoice"
        android:layout_width="126dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:theme="@style/spinner_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/select"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/select"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginEnd="92dp"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:text="select radius:"
        android:textAlignment="textStart"
        android:textColor="@color/yolkYellow"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/profile_btn"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn"
        app:layout_constraintVertical_bias="0.354" />

    <Button
        android:id="@+id/logMsg"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#7EFFFFFF"
        android:fontFamily="cursive"
        android:text=""
        android:textColor="#0091D4"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/restaurantButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/log_out_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickProfile"
        android:text="My Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_reg_btn" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickSave"
        android:text="Save Trip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripsButton" />

    <Button
        android:id="@+id/tripsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/lavender"
        android:onClick="onClickTrips"
        android:text="My Trips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_btn"
        tools:layout_editor_absoluteY="187dp" />

</androidx.constraintlayout.widget.ConstraintLayout>